--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -48,21 +48,26 @@
 }
 
 .button-dice {
-  img {
-    z-index: 9999;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  .border-button {
+    padding: 1rem;
+    border-radius: 100%;
     background-color: $neon-green;
-    border-radius: 30%;
+    display: flex;
+    position: relative;
     transition: ease-in-out 0.4s;
-    padding: 10px;
-    margin-top: 50px;
+    top: -22px;
     cursor: pointer;
-    margin-top: -22px;
-    margin-left: 258px;
+    img {
+      z-index: 9999;
+      background-color: $neon-green;
+    }
   }
-
-  img:hover {
-    box-shadow: 5px 5px 50px $neon-green;
-  }
+}
+.border-button:hover {
+  box-shadow: 5px 5px 50px $neon-green;
 }
 
 .attribution {
@@ -87,10 +92,6 @@
         margin-bottom: 30px;
       }
     }
-  }
-
-  img {
-    margin-right: 255px;
   }
 
   .api-generator {
